<resources>
    <string name="app_name">TJ</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_username">User Name</string>
    <string name="action_bio">BIO</string>
    <string name="action_tags">Tags</string>
    <string name="action_settings">Settings</string>
    <string name="action_translate">Translate</string>
    <string name="divider">\t</string>

    <string name="action_create_travel">Create travel</string>
    <string name="action_create_sight_by_address">Create sight by address</string>
    <string name="action_travels_list">Show travels list</string>
    <string name="action_sights_list">Show sights list</string>
    <string name="action_separated_sights_on_map">Separated sights on map</string>
    <string name="action_the_nearest_travel_to_me">Show the nearest travel to me</string>
    <string name="action_add_sight">Create sight on the map</string>
    <string name="action_add_sight_easy">Create sight on the map easy</string>
    <string name="action_add_sight_current">Add my current location as sight</string>

    <!--Remove later-->
    <string name="action_select_sights">Select all sights from db</string>
    <string name="action_select_travels">Select all travels from db</string>
    <string name="action_select_photos">Select all photos from db</string>
    <string name="action_select_travels_join">Select travels join</string>
    <!--/Remove later-->

    <string name="sight">Sight</string>
    <string name="sight_description">Description:</string>
    <string name="sight_latitude">Latitude:</string>
    <string name="sight_longitude">Longitude:</string>
    <string name="sight_travel">Travel name:</string>
    <string name="sight_order">Order:</string>
    <string name="sight_icon">Icon:</string>
    <string name="sight_mode">Sight mode</string>
    <string name="sight_mode_travel">Travel</string>
    <string name="sight_mode_sights_list">Sights list</string>
    <string name="sight_point">Sight point</string>
    <string name="sight_set_description">Add description for the sight:</string>
    <string name="sight_data">Sight</string>

    <string name="button_delete">Delete</string>
    <string name="button_create">Create</string>
    <string name="button_show_on_the_map">Show on the map</string>
    <string name="button_attach">Attach</string>
    <string name="button_clear">Clear</string>
    <string name="button_save">Save</string>

    <string name="travel">Travel</string>
    <string name="travel_name">Name:</string>
    <string name="travel_photo">Photo:</string>
    <string name="travel_button_show_sights">Show sights</string>
    <string name="travel_data">Travel sights ids</string>

    <string name="sights_header">Sights</string>

    <string name="select_icon">Select icon for sight:</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>

    <string-array name="icon_names">
        <item>ic_person_pin_circle_blue_24px</item>
        <item>ic_person_pin_circle_black_24px</item>
        <item>ic_place_blue_24px</item>
        <item>ic_place_black_24px</item>
        <item>ic_favorite_border_black_24px</item>
    </string-array>

    <string-array name="icon_drawables">
        <item>@drawable/ic_person_pin_circle_blue_24px</item>
        <item>@drawable/ic_person_pin_circle_black_24px</item>
        <item>@drawable/ic_place_blue_24px</item>
        <item>@drawable/ic_place_black_24px</item>
        <item>@drawable/ic_favorite_border_black_24px</item>
    </string-array>

    <string name="search_choose_button">Choose</string>
    <string name="search_clear_button">Clear</string>
    <string name="search_hint">Type address</string>
    <string name="search_copyright">Powered by Google</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <string name="travel_create_from_point">\"Choose From\" Mode</string>
    <string name="travel_create_to_point">\"Choose To\" Mode</string>
    <string name="maps_travel_create_button">Create Travel</string>
    <string name="maps_clear_button">Clear</string>
    <string name="maps_choose_from_marker">Choose \"From Point\" marker</string>
    <string name="maps_choose_to_marker">Choose \"To Point\" marker</string>
    <string name="maps_from_address">\"From\" address</string>
    <string name="maps_to_address">\"To\" address</string>
    <string name="maps_address_template">%1$s, %2$s, %3$s, %4$s</string>
    <string name="travel_set_name">Enter name for the travel:</string>
    <string name="travel_wrong_points">Wrong \"from\" or \"to\" point!</string>
    <string name="maps_nearest_travel">The nearest travel to your current location</string>

    <string name="travels_header">Travels</string>
    <string name="travels_no_any_travels">No any travels yet</string>
</resources>
