<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.tj.SightActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sight_header_textview"
                style="@style/FontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sight"/>

            <RelativeLayout
                android:id="@+id/layouts1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/sight_desc_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/sight_desc"
                    android:paddingEnd="8dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/sight_description"/>

                <TextView
                    android:id="@+id/sight_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layouts2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/sight_latitude_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/sight_latitude"/>

                <TextView
                    android:id="@+id/sight_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layouts3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts2"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/sight_longitude_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/sight_longitude"/>

                <TextView
                    android:id="@+id/sight_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layouts4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts3"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/sight_travel_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/sight_travel"/>

                <TextView
                    android:id="@+id/sight_travel_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingEnd="8dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layouts41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts4"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/sight_order_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/sight_order"/>

                <TextView
                    android:id="@+id/sight_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:ems="13"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layouts5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/layouts41"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_inner_layout">

                    <TextView
                        android:id="@+id/sight_icon_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingEnd="8dp"
                        android:text="@string/sight_icon"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/show_imageviews_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/show_inner_layout"
                    android:paddingBottom="20dp"
                    android:layout_alignParentEnd="true">
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_imageviews_layout"
                    android:id="@+id/sight_image_button_layout">
                    <Button
                    android:id="@+id/sight_button_attach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/sight_button_clear"
                    android:text="@string/button_attach"/>

                    <Button
                        android:id="@+id/sight_button_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/button_clear"/>
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/sight_button_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/button_show_on_the_map"/>

            <Button
                android:id="@+id/sight_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layouts5"
                android:layout_toEndOf="@+id/sight_button_on_map"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/button_save"/>

            <Button
                android:id="@+id/sight_button_delete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/sight_button_save"
                android:layout_below="@id/layouts5"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/button_delete"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
