<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.tj.TravelActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/travel_header_textview"
                style="@style/FontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/travel"/>

            <RelativeLayout
                android:id="@+id/layoutt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/travel_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/travel_desc"
                    android:paddingEnd="8dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/travel_name"/>

                <TextView
                    android:id="@+id/travel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/layoutt1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_inner_layout">

                    <TextView
                        android:id="@+id/travel_photo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingEnd="8dp"
                        android:text="@string/travel_photo"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/travel_imageviews_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/show_inner_layout"
                    android:paddingBottom="20dp"
                    android:layout_alignParentEnd="true">
                </LinearLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/travel_button_show_sights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutt5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/travel_button_show_sights"/>

            <Button
                android:id="@+id/travel_button_show_on_the_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutt5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/button_show_on_the_map"/>

            <Button
                android:id="@+id/travel_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutt5"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/button_delete"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

